<resources>
    <string name="app_name">Fantasy Traveller</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forget">Forget Password</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="create_acc">Create New Account</string>
    <string name="toast_message">This is a toast message</string>
    <string name="title_activity_dashboard">Map</string>
    <string name="OTP">One Time Password</string>
    <string name="forget_input">UserName/Email/Phone.No</string>
    <string name="mainactivity">Main Menu</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confrim Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Avatar">Avatar</string>
    <string name="forgotinput">Forgot Input</string>
    <string name="Offline">Offline Mode</string>
    <string name="test">Test Mode</string>
    <string name="IPAdddress">10.6.35.144:8080</string>
    <string name="map_Dashboard_Indicator"> ← Dashboard</string>
    <string name="Remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="loginHint">UserName/Email/Phone</string>
    <string name="SocialLogin">Social Media Login</string>


    //Preferences data
    <string name="prompt_mode">Select a mode</string>
    <string-array name="mode_arrays">
        <item>Walking</item>
        <item>Driving</item>
        <item>Bus</item>
        <item>Dart</item>
    </string-array>

    <string name="prompt_sex">Select a mode</string>
    <string-array name="sex_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>No discrimination</item>
    </string-array>
</resources>
