<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_margin="30dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/OTP"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/editextstyle"
                android:hint="@string/forget_input"
                android:inputType="text|textEmailAddress|phone" />

            <Button
                android:background="@drawable/editextstyle"
                android:textColor="@color/colorBackground"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"/>


        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</LinearLayout>