<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/loginID"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/editextstyle"
                    android:hint="@string/loginHint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/LoginPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/editextstyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorsidebar_Header"
                    android:text="@string/Remember_me" />

                <Button
                    android:id="@+id/Login_loginButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/login"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/Login_RegisterButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/create_acc"
                    android:textColor="@color/colorBackground" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:text="@string/SocialLogin"
                        android:textSize="23sp" />

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/google" />

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/instgram" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>